# ml-sandbox

./: .gitignore  pyproject.toml
ml_sandbox/: linear_regression_module.py  linear_regression_optimizer.py  linear_regression_vanilla.py  mnist_from_scratch.py  mnist_with_cnn.py
tests/: test_ml_sandbox.py
