[tool.poetry]
name = "ml-sandbox"
version = "0.1.0"
description = ""
authors = ["bglgwyng <bglgwyng@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = {url = "https://download.pytorch.org/whl/cu102/torch-1.6.0-cp38-cp38-win_amd64.whl"}
requests = "^2.24.0"
matplotlib = "^3.3.2"
torchvision = {url = "https://download.pytorch.org/whl/cu102/torchvision-0.7.0-cp38-cp38-win_amd64.whl"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
